2009-03-03  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-03-02  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2009-03-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-03-01  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Fixed a few typos.
	* en_GB/en_GB.po: Updated British English translation.

2009-03-01  Simos Xenitellis  <simos@gnome.org>

	* el/el.po: Updated Greek translation (Michael Kotsarinis)

2009-02-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-02-26  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-02-24  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-02-24  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation by Stefan Horning.

2009-02-20  Philip Withnall  <philip@tecnocode.co.uk>

	* eu/figures: Remove duplicate figures.
	* eu: Update svn:ignore properties.

2009-02-18  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.
	* sv/figures: Updated screenshot.

2009-02-17  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* eu/figures/: Added image in Basque language. Images are:
		totem_pause_button.png
		totem_start_window.png
		totem_volume_mute_button.png
		totem_previous_button.png
		totem_play_button.png
		totem_volume_maximum_button.png
		totem_next_button.png
		totem_show_playlist_button.png

2009-02-16  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Updated the documentation to match changes in Totem
	since the stone age. Added a bit of documentation for new features.
	(Helps: #496647)

2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* eu/eu.po: Added Basque translation.
	* Makefile.am: Added 'eu' to DOC_LINGUAS.

2009-02-15  Daniel Nylander <po@danielnylander.se>
