@@ -1,3 +1,8 @@
+2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* C/totem.xml: Added documentation for the plugins and tidied up a
+	few other things.
+
 2009-03-03  Mario Blättermann  <mariobl@svn.gnome.org>
 
 	* de/de.po: Updated German translation.
